# roll-call

./: .env.example  .gitignore  README.md  compose.yaml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CategorySection.tsx  ConfidenceSelector.tsx  RatingModal.tsx  RatingScale.tsx  ScoreBadge.tsx  TechniqueLibrary.tsx  TechniqueLibraryHeader.tsx  TechniqueRow.tsx
frontend/src/components/icons/: index.tsx
frontend/src/components/layout/: AppHeader.tsx  BottomNav.tsx  Layout.tsx
frontend/src/components/progress/: CategoryRadarChart.tsx  ProgressPage.tsx  ProgressSummary.tsx  WeakestCategories.tsx
frontend/src/components/sessions/: LogSessionModal.tsx  SessionCard.tsx  SessionDetailModal.tsx  SessionEmptyState.tsx  SessionFormModal.tsx  SessionStatsBar.tsx  SessionsPage.tsx
frontend/src/components/ui/: FormField.tsx  ModalShell.tsx  PrimaryButton.tsx
frontend/src/data/: ratingColors.ts  techniques.ts
frontend/src/hooks/: useLocalStorage.ts  useSessionLog.ts  useTechniqueRatings.ts
